--- a/djangowork.html
+++ b/djangowork.html
@@ -52,7 +52,7 @@
 <body>
 
 <div class="container work-section">
-  <h2 class="text-center mb-5">My Python Works</h2>
+  <h2 class="text-center mb-5">My Django Projects</h2>
 
   <div class="row g-4">
     <div class="col-md-3 col-sm-6">
@@ -79,14 +79,14 @@
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal4">
         <img src="images/djangoimg/4.png" class="work-img" alt="Python Project 4">
-        <p class="work-desc">Fibonacci Calculator</p>
+        <p class="work-desc">Sum of two numbers</p>
       </div>
     </div>
 
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal5">
         <img src="images/djangoimg/5.png" class="work-img" alt="Python Project 5">
-        <p class="work-desc">Factorial Calculator</p>
+        <p class="work-desc">Largest of Two Numbers</p>
       </div>
     </div>
 
@@ -100,7 +100,7 @@
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal7">
         <img src="images/djangoimg/7.png" class="work-img" alt="Python Project 7">
-        <p class="work-desc">Largest of Two Numbers</p>
+        <p class="work-desc">Factorial Calculator</p>
       </div>
     </div>
 
