--- a/htcsbotwork.html
+++ b/htcsbotwork.html
@@ -52,7 +52,7 @@
 <body>
 
 <div class="container work-section">
-  <h2 class="text-center mb-5">My Html,css,tkinter,jqury and bootstrap Works</h2>
+  <h2 class="text-center mb-5">My Projects in HTML • CSS • Tkinter • jQuery • Bootstrap</h2>
 
   <div class="row g-4">
     <div class="col-md-3 col-sm-6">
@@ -156,14 +156,14 @@
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal15">
         <img src="images/cssbtimg/15.png" class="work-img" alt="Python Project 15">
-        <p class="work-desc">Type of foem boxeses</p>
+        <p class="work-desc">A simple calculator</p>
       </div>
     </div>
 
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal16">
         <img src="images/cssbtimg/16.png" class="work-img" alt="Python Project 16">
-        <p class="work-desc">Student table</p>
+        <p class="work-desc">List of favourite country</p>
       </div>
     </div>
 
