--- a/htmlwork.html
+++ b/htmlwork.html
@@ -52,7 +52,7 @@
 <body>
 
 <div class="container work-section">
-  <h2 class="text-center mb-5">My Html Works</h2>
+  <h2 class="text-center mb-5">My Html Projects</h2>
 
   <div class="row g-4">
     <div class="col-md-3 col-sm-6">
@@ -148,7 +148,7 @@
 
     <div class="col-md-3 col-sm-6">
       <div class="card work-card" data-bs-toggle="modal" data-bs-target="#imgModal14">
-        <img src="imageshtml//14.png" class="work-img" alt="Python Project 14">
+        <img src="images/html//14.png" class="work-img" alt="Python Project 14">
         <p class="work-desc">Img and video</p>
       </div>
     </div>
