--- a/minioproject.html
+++ b/minioproject.html
@@ -38,7 +38,7 @@
 
 <section id="MyWork" class="certificates">
   <div class="container">
-    <h2 class="text-center mb-5">💼 My Works</h2>
+    <h2 class="text-center mb-5">💼 My Projects</h2>
     <div class="row g-4">
 
       <div class="col-md-4 col-sm-6">
