--- a/mysqlwork.html
+++ b/mysqlwork.html
@@ -52,7 +52,7 @@
 <body>
 
 <div class="container work-section">
-  <h2 class="text-center mb-5">My mysql Works</h2>
+  <h2 class="text-center mb-5">My mysql Projects</h2>
 
   <div class="row g-4">
     <div class="col-md-3 col-sm-6">
