--- a/profile.html
+++ b/profile.html
@@ -71,15 +71,16 @@
 </head>
 <body>
   <div class="profile-container">
-    <img src="images/img2.png" width="200" height="200" class="rounded-circle" alt="Profile">
+    <img src="images/Smiling_Man_230x230_Exact.png" width="200" height="200" class="rounded-circle" alt="Profile">
     <h2>Muhammed Rinshad</h2>
     <p>Python Full Stack Developer</p>
 
     <div class="contact-links">
-      <a href="mailto:m.rinshad210@gmail.com"><i class="fa-solid fa-envelope"></i> Email</a>
-      <a href="https://github.com/muhammedRinshad210" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
-      <a href="https://linkedin.com/in/yourlinkedin" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
-      <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back to Home</a>
+      <a href="tel:+917356742758"><i class="fa-solid fa-phone"></i>contact</a>
+      <a href="mailto:m.rinshad210@gmail.com"><i class="fa-solid fa-envelope"></i>mail</a>
+      <a href="https://github.com/muhammedRinshad210" target="_blank"><i class="fa-brands fa-github"></i> github</a>
+      <a href="https://wa.me/917356742758" target="_blank"><i class="fa-brands fa-whatsapp"></i> whatsapp</a>
+      <a href="index.html"><i class="fa-solid fa-arrow-left"></i>back to home</a>
     </div>
   </div>
 </body>
