Update project link in portfolio section

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <div class="card-body">
               <h5 class="card-title">PORTFOLIO</h5>
               <p class="card-text">Simple portfolio layout<br>built with HTML, CSS, Bootstrap.</p>
-              <a href="#" class="btn btn-gold">View Project</a>
+              <a href="https://muhammedrinshad210.github.io/Portfolio/" class="btn btn-gold">View Project</a>
             </div>
           </div>
         </div>
