Add download link for resume in profile.html

--- a/profile.html
+++ b/profile.html
@@ -80,6 +80,7 @@
       <a href="mailto:m.rinshad210@gmail.com"><i class="fa-solid fa-envelope"></i>mail</a>
       <a href="https://github.com/muhammedRinshad210" target="_blank"><i class="fa-brands fa-github"></i> github</a>
       <a href="https://wa.me/917356742758" target="_blank"><i class="fa-brands fa-whatsapp"></i> whatsapp</a>
+      <a href="images/resume/Muhammed_Rinshad_CV.pdf (1).pdf.pdf" download><i class="fa-solid fa-file-arrow-down"></i> resume</a>
       <a href="index.html"><i class="fa-solid fa-arrow-left"></i>back to home</a>
     </div>
   </div>
